# fastmcp-openapi

./: Makefile  PROMPTS.md  README.md  pyproject.toml
api_catalog_mcp/: __init__.py  server.py
api_catalog_mcp/catalog/: __init__.py  deref.py  engine.py  index.py  ingest.py  model.py  payloads.py  render.py  resolve.py  semantic.py  snippets.py  validate.py
api_catalog_mcp/tests/: test_agent_features.py  test_golden_outputs.py
api_catalog_mcp/tests/golden/: catalog_search.json  endpoint_get.json  get_api_catalog.json  payload_generate.json  snippet_generate.json
api_catalog_mcp/tests/specs/: store.json
configs/: codex.config.toml
docs/: execution-safety.md  getting-started-codex.md  getting-started-deepagents.md  tool-reference.md
examples/: deepagents_demo.py  intent_create_pet.json  intent_get_order.json  intent_list_orders.json  intent_list_pets.json  intent_rotate_key.json
specs/: auth.json  pets.yaml  store.json
